--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti107:3.3": "hanno successo nel buon Dhamma, ",
   "iti107:3.4": "suprema tregua da ogni giogo.** ",
   "iti107:4.1": "Da quelli che hanno una dimora, ",
-  "iti107:4.2": "i senza casa accettano il saio, ",
+  "iti107:4.2": "i senza dimora accettano il saio, ",
   "iti107:4.3": "i requisiti e l’alloggio, ",
   "iti107:4.4": "per proteggere dal pericolo. ",
   "iti107:5.1": "Per via del Fortunato, ",
