--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti107:3.2": "dipendendo gli uni dagli altri ",
   "iti107:3.3": "hanno successo nel buon Dhamma, ",
   "iti107:3.4": "suprema tregua da ogni giogo.** ",
-  "iti107:4.1": "Da quelli che hanno una dimora, ",
+  "iti107:4.1": "Da quelli che hanno dimora, ",
   "iti107:4.2": "i senza dimora accettano saio, ",
   "iti107:4.3": "requisiti, alloggio ",
   "iti107:4.4": "e protezione dai pericoli. ",
