--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti107:4.2": "i senza dimora accettano saio, ",
   "iti107:4.3": "requisiti, alloggio ",
   "iti107:4.4": "e protezione dai pericoli. ",
-  "iti107:5.1": "Per via del Fortunato, ",
+  "iti107:5.1": "Per via del Ben Avventurato (Fortunato), ",
   "iti107:5.2": "i laici dediti alla vita domestica, ",
   "iti107:5.3": "hanno fede negli arahant, ",
   "iti107:5.4": "praticanti del Jhāna dalla nobile saggezza. ",
