--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -17,5 +17,5 @@
   "iti107:6.1": "Dopo aver praticato il Dhamma in questa vita, ",
   "iti107:6.2": "quel sentiero che conduce a una buona destinazione, ",
   "iti107:6.3": "si dilettano nel mondo dei Deva ",
-  "iti107:6.4": "felici appagando i propri desideri sensuali. *** "
+  "iti107:6.4": "appagando felici i propri desideri sensuali. *** "
 }
