--- a/translation/de/site/names_translation-de-site.json
+++ b/translation/de/site/names_translation-de-site.json
@@ -1547,7 +1547,7 @@
   "names:1546": "unabhängiger Buddha ",
   "names:1547": "<a class='ref' href='/mn116'>MN 116</a> ",
   "names:1548": "Rāmagāma ",
-  "names:1549": "Dorf ",
+  "names:1549": "Dorf Rāma ",
   "names:1550": "<a class='ref' href='/dn16'>DN 16</a> ",
   "names:1551": "Rāmaṇeyyaka ",
   "names:1552": "Mönch ",
