--- a/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti108:2.2": "Si è allontanato da questo Dhamma Vinaya, non si appresta più a crescere, progredire e maturare in questo Dhamma Vinaya. ",
   "iti108:2.3": "Se un cercatore non è subdolo, ciarlone o ostinato, ma invece avveduto (oculato) e ben raccolto, quel cercatore è un mio discepolo. ",
   "iti108:2.4": "Non si è allontanato da questo Dhamma Vinaya, e si appresta a crescere, progredire e maturare in questo Dhamma Vinaya. ",
-  "iti108:3.1": "Quelli che sono subdoli, ostinati, ciarloni, adorni, ",
+  "iti108:3.1": "Quelli che sono subdoli, ostinati, ciarloni, impostori, ",
   "iti108:3.2": "arroganti e distratti ",
   "iti108:3.3": "non crescono in questo Dhamma ",
   "iti108:3.4": "insegnato dal Buddha perfettamente risvegliato. ",
