--- a/translation/de/site/names_translation-de-site.json
+++ b/translation/de/site/names_translation-de-site.json
@@ -1570,7 +1570,7 @@
   "names:1569": "Nonne ",
   "names:1570": "<a class='ref' href='/thig13.2'>Thig 13.2</a> ",
   "names:1571": "Rohitassa ",
-  "names:1572": "Sohn des Gottes Bhoja, Himmelswanderer ",
+  "names:1572": "Gott, früher Seher aus dem Bhoja-Volk, Himmelswanderer ",
   "names:1573": "<a class='ref' href='/an4.45'>AN 4.45</a> ",
   "names:1574": "Rojā ",
   "names:1575": "Gottheiten (Devas) ",
