--- a/translation/de/site/names_translation-de-site.json
+++ b/translation/de/site/names_translation-de-site.json
@@ -1576,7 +1576,7 @@
   "names:1575": "Gottheiten (Devas) ",
   "names:1576": "<a class='ref' href='/dn20'>DN 20</a> ",
   "names:1577": "Roruva ",
-  "names:1578": "Höllenwelt ",
+  "names:1578": "Hölle der Schreie ",
   "names:1579": "<a class='ref' href='/sn3.20'>SN 3.20</a> ",
   "names:1580": "Rosika ",
   "names:1581": "Barbier ",
