--- a/translation/de/site/names_translation-de-site.json
+++ b/translation/de/site/names_translation-de-site.json
@@ -1581,7 +1581,7 @@
   "names:1580": "Rosika ",
   "names:1581": "Barbier ",
   "names:1582": "<a class='ref' href='/dn12'>DN 12</a> ",
-  "names:1583": "Rucira ",
+  "names:1583": "Ruciras ",
   "names:1584": "Gottheiten (Devas) ",
   "names:1585": "<a class='ref' href='/dn20'>DN 20</a> ",
   "names:1586": "S ",
