--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -129,5 +129,6 @@
   "mn79:22.9": "Zu einer Zeit, zu der jemand das Lügen aufgibt und nicht mehr lügt, ist zu dieser Zeit sein Selbst ausschließlich glücklich, oder erlebt es sowohl Glück als auch Schmerz?“ ",
   "mn79:22.10": "„Es erlebt sowohl glück als auch Schmerz, Herr.“ ",
   "mn79:22.11": "„Was denkst du, Udāyī? ",
-  "mn79:22.12": "Zu einer Zeit, zu der jemand eine Art inbrünstiger Bußübung aufnimmt und befolgt, ist zu dieser Zeit sein Selbst ausschließlich glücklich, oder erlebt es sowohl Glück als auch Schmerz?“ "
+  "mn79:22.12": "Zu einer Zeit, zu der jemand eine Art inbrünstiger Bußübung aufnimmt und befolgt, ist zu dieser Zeit sein Selbst ausschließlich glücklich, oder erlebt es sowohl Glück als auch Schmerz?“ ",
+  "mn79:22.13": "„Es erlebt sowohl glück als auch Schmerz, Herr.“ "
 }
