--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -136,5 +136,6 @@
   "mn79:23.1": "„Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!“ ",
   "mn79:23.2": "„Aber Udāyī, warum sagst du: ",
   "mn79:23.3": "‚Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!‘?“ ",
-  "mn79:23.4": "„Herr, in unserer eigenen Tradition heißt es: "
+  "mn79:23.4": "„Herr, in unserer eigenen Tradition heißt es: ",
+  "mn79:23.5": "‚Es gibt eine ausschließlich glückliche Welt, und es gibt eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.‘ "
 }
