--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -142,5 +142,6 @@
   "mn79:23.7": "Aber Herr, gibt es eine ausschließlich glückliche Welt? Und gibt es eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ ",
   "mn79:24.1": "„Es gibt eine ausschließlich glückliche Welt, und es gibt eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.“ ",
   "mn79:24.2": "„Nun, Herr, was ist diese begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ ",
-  "mn79:25.1": "„Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; … "
+  "mn79:25.1": "„Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; … ",
+  "mn79:25.2": "Wenn das Ausrichten und Halten des Geistes sich beruhigt, tritt er in die zweite Vertiefung ein und verweilt darin; … "
 }
