--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -144,5 +144,5 @@
   "mn79:24.2": "„Nun, Herr, was ist diese begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ ",
   "mn79:25.1": "„Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … ",
   "mn79:25.2": "Wenn das Ausrichten und Halten des Geistes sich beruhigt, tritt er in die zweite Vertiefung ein und verweilt darin … ",
-  "mn79:25.3": "Mit dem Schwinden der Ekstase tritt er in die dritte Vertiefung ein und verweilt darin; … "
+  "mn79:25.3": "Mit dem Schwinden der Ekstase tritt er in die dritte Vertiefung ein und verweilt darin … "
 }
