--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -147,5 +147,6 @@
   "mn79:25.3": "Mit dem Schwinden der Ekstase tritt er in die dritte Vertiefung ein und verweilt darin … ",
   "mn79:25.4": "Das ist die begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.“ ",
   "mn79:25.5": "„Herr, das ist nicht die begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen. An diesem Punkt wurde eine ausschließlich glückliche Welt bereits verwirklicht.“ ",
-  "mn79:25.6": "„Nein, Udāyī, an diesem Punkt wurde eine ausschließlich glückliche Welt noch nicht verwirklicht. "
+  "mn79:25.6": "„Nein, Udāyī, an diesem Punkt wurde eine ausschließlich glückliche Welt noch nicht verwirklicht. ",
+  "mn79:25.7": "Das ist die begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.“ "
 }
