--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -150,5 +150,6 @@
   "mn79:25.6": "„Nein, Udāyī, an diesem Punkt wurde eine ausschließlich glückliche Welt noch nicht verwirklicht. ",
   "mn79:25.7": "Das ist die begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.“ ",
   "mn79:26.1": "Daraufhin machte Sakuludāyīs Versammlung einen Tumult, einen Höllenlärm: ",
-  "mn79:26.2": "„In diesem Fall sind wir verloren, und unsere Tradition ebenfalls! In diesem Fall sind wir verloren, und unsere Tradition ebenfalls! "
+  "mn79:26.2": "„In diesem Fall sind wir verloren, und unsere Tradition ebenfalls! In diesem Fall sind wir verloren, und unsere Tradition ebenfalls! ",
+  "mn79:26.3": "Wir kennen nichts, das höher wäre als das!“ "
 }
