--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -152,5 +152,6 @@
   "mn79:26.1": "Daraufhin machte Sakuludāyīs Versammlung einen Tumult, einen Höllenlärm: ",
   "mn79:26.2": "„In diesem Fall sind wir verloren, und unsere Tradition ebenfalls! In diesem Fall sind wir verloren, und unsere Tradition ebenfalls! ",
   "mn79:26.3": "Wir kennen nichts, das höher wäre als das!“ ",
-  "mn79:26.4": "Da beruhigte Sakuludāyī diese Wanderer und sagte zum Buddha: "
+  "mn79:26.4": "Da beruhigte Sakuludāyī diese Wanderer und sagte zum Buddha: ",
+  "mn79:27.1": "„Nun, Herr, an welchem Punkt ist eine ausschließlich glückliche Welt verwirklicht?“ "
 }
