--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -159,5 +159,6 @@
   "mn79:27.4": "Das ist der Punkt, an dem eine ausschließlich glückliche Welt verwirklicht wurde.“ ",
   "mn79:28.1": "„Sicherlich führen die Mönche und Nonnen unter dem Buddha das geistliche Leben, um diese ausschließlich glückliche Welt zu verwirklichen?“ ",
   "mn79:28.2": "„Nein, Udāyī, die Mönche und Nonnen führen unter mir nicht das geistliche Leben, um diese ausschließlich glückliche Welt zu verwirklichen. ",
-  "mn79:28.3": "Es gibt andere, höhere und erlesenere Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen.“ "
+  "mn79:28.3": "Es gibt andere, höhere und erlesenere Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen.“ ",
+  "mn79:28.4": "„Aber Herr, was sind diese höheren und erleseneren Dinge?“ "
 }
