--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti109:2.1": "Cercatori, immaginate se un uomo fosse trasportato giù dalla corrente di un fiume ameno e splendente, ",
   "iti109:2.2": "e un altro uomo, dalla buona vista, stando in piedi sulla riva, lo vedesse e gli dicesse: ",
-  "iti109:2.3": "‘Attento amico, sei trascinato giù dalla corrente di un fiume ameno e splendente, ma sotto ti aspetta un lago con onde e mulinelli, pieno di animali feroci e mostri. Attento amico, perché se raggiungi il lago andrai incontro alla morte o sarai vicino alla morte o andrai incontro a della sofferenza.’ ",
+  "iti109:2.3": "‘Attento amico, sei trasportato giù dalla corrente di un fiume ameno e splendente, ma sotto ti aspetta un lago con onde e mulinelli, pieno di animali feroci e mostri. Attento amico, perché se raggiungi il lago andrai incontro alla morte o sarai vicino alla morte o andrai incontro a della sofferenza.’ ",
   "iti109:2.4": "E allora quella persona, dopo aver sentito quelle parole da quella persona, con mani e piedi farebbe uno sforzo controcorrente. ",
   "iti109:3.1": "Cercatori, simile a questa persona vi ho offerto un insegnamento per il vostro bene ",
   "iti109:3.2": "e questo qui è il significato: ",
