--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti109:2.1": "Cercatori, immaginate se un uomo fosse trasportato giù dalla corrente di un fiume ameno e splendente, ",
   "iti109:2.2": "e un altro uomo, dalla buona vista, stando in piedi sulla riva, lo vedesse e gli dicesse: ",
   "iti109:2.3": "‘Attento amico, sei trasportato giù dalla corrente di un fiume ameno e splendente, ma sotto ti aspetta un lago con onde e mulinelli, pieno di animali feroci e mostri. Attento amico, perché se raggiungi il lago andrai incontro alla morte o sarai vicino alla morte o andrai incontro a della sofferenza.’ ",
-  "iti109:2.4": "Allora quell’uomo, dopo aver udito le parole dell’altro, con mani e piedi si forzerebbe di nuotare controcorrente. ",
+  "iti109:2.4": "Allora quell’uomo, dopo aver udito le parole dell’altro, con mani e piedi si sforzerebbe di nuotare controcorrente. ",
   "iti109:3.1": "Cercatori, simile a questa persona vi ho offerto un insegnamento per il vostro bene ",
   "iti109:3.2": "e questo qui è il significato: ",
   "iti109:3.3": "‘la corrente di un fiume,’ è sinonimo di questa sete. ",
