--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti109:2.3": "‘Attento amico, sei trasportato giù dalla corrente di un fiume ameno e splendente, ma sotto ti aspetta un lago con onde e mulinelli, pieno di animali feroci e mostri. Attento amico, perché se raggiungi il lago andrai incontro alla morte o sarai vicino alla morte o andrai incontro a della sofferenza.’ ",
   "iti109:2.4": "Allora quell’uomo, dopo aver udito le parole dell’altro, con mani e piedi si sforzerebbe di nuotare controcorrente. ",
   "iti109:3.1": "Cercatori, ho usato una similitudine per spiegare il significato. ",
-  "iti109:3.2": "e questo qui è il significato: ",
+  "iti109:3.2": "E questo è il significato: ",
   "iti109:3.3": "‘la corrente di un fiume,’ è sinonimo di questa sete. ",
   "iti109:4.1": "‘piacevole e bello’ è sinonimo dei sei sensi interni. ",
   "iti109:5.1": "‘Sotto c’è un lago’ è sinonimo delle cinque catene inferiori. ",
