--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -161,5 +161,6 @@
   "mn79:28.2": "„Nein, Udāyī, die Mönche und Nonnen führen unter mir nicht das geistliche Leben, um diese ausschließlich glückliche Welt zu verwirklichen. ",
   "mn79:28.3": "Es gibt andere, höhere und erlesenere Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen.“ ",
   "mn79:28.4": "„Aber Herr, was sind diese höheren und erleseneren Dinge?“ ",
-  "mn79:29-36.1": "„Da erscheint ein Klargewordener in der Welt, ein Vollendeter, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet. … "
+  "mn79:29-36.1": "„Da erscheint ein Klargewordener in der Welt, ein Vollendeter, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet. … ",
+  "mn79:37.1": "Er gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. "
 }
