--- a/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
@@ -85,7 +85,7 @@
   "dn6:11.9": "Das ist der Grund, das ist die Ursache, dass Sunakkhatta diese Töne nicht hören kann, obwohl es sie doch wirklich gibt.“ ",
   "dn6:12.1": "„Sicherlich führen die Mönche und Nonnen unter dem Buddha das geistliche Leben, um eine solche Versenkung entwickeln zu können?“ ",
   "dn6:12.2": "„Nein, Mahāli, die Mönche und Nonnen führen unter mir nicht das geistliche Leben, um eine solche Versenkung entwickeln zu können. ",
-  "dn6:12.3": "Es gibt andere, erlesenere Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen.“ ",
+  "dn6:12.3": "Es gibt andere, höhere und erlesenere Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen.“ ",
   "dn6:13.0": "2.2. Die vier edlen Früchte ",
   "dn6:13.1": "„Aber Herr, was sind diese erleseneren Dinge?“ ",
   "dn6:13.2": "„Zuerst, Mahāli, ist da ein Mönch mit dem Auflösen von drei Fesseln in den Strom eingetreten, muss nicht mehr in der Unterwelt wiedergeboren werden und ist für das Erwachen bestimmt. ",
