--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti109:7.1": "‘Mulinelli’ è sinonimo dei cinque oggetti dei piaceri sensuali. ",
   "iti109:8.1": "‘Animali feroci e mostri/demoni’ è sinonimo della donna. [persona attraente?] ",
   "iti109:9.1": "‘Controcorrente’ è sinonimo di rinuncia. ",
-  "iti109:10.1": "‘con mani e piedi farebbe uno sforzo’ è sinonimo di sforzarsi (arouse energy). ",
+  "iti109:10.1": "‘con mani e piedi si sforzerebbe’ è sinonimo di sforzarsi (arouse energy). ",
   "iti109:11.1": "‘una persona in piedi sulla riva, dotata di vista’ è sinonimo di colui che è arrivato alla verità, dell’Arahant, del Buddha perfettamente risvegliato. ",
   "iti109:12.1": "Con la sofferenza lascerebbe andare anche i piaceri sensuali, ",
   "iti109:12.2": "desiderando di arrivare alla liberazione da ogni giogo. ",
