--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "mn80:12.6": "Geschmäcke, die die Zunge erkennt … ",
   "mn80:12.7": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "mn80:12.8": "Das sind die fünf Arten sinnlicher Erregung. ",
-  "mn80:13.1": "Das Glück und die Freude, die von diesen fünf Arten sinnlicher Erregung kommen, nennt man Sinnenfreuden. "
+  "mn80:13.1": "Das Glück und die Freude, die von diesen fünf Arten sinnlicher Erregung kommen, nennt man Sinnenfreuden. ",
+  "mn80:13.2": "‚Von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnlich "
 }
