--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -16,7 +16,7 @@
   "iti109:11.1": "‘un uomo, dalla buona vista, che sta in piedi sulla riva,’ è sinonimo di colui che è arrivato alla verità, dell’Arahant, del Buddha perfettamente risvegliato. ",
   "iti109:12.1": "Con sofferenza lascerebbe andare i piaceri sensuali, ",
   "iti109:12.2": "aspirando alla futura suprema liberazione da ogni giogo. ",
-  "iti109:12.3": "Conoscendo perfettamente con il cuore ben liberato, ",
+  "iti109:12.3": "Conoscendo correttammente, con il cuore ben liberato, ",
   "iti109:12.4": "verrebbe toccato dalla liberazione qui e adesso ",
   "iti109:12.5": "Chi ha perfetta conoscenza, completato la vita spirituale ",
   "iti109:12.6": "quello si chiama uno che è giunto alla fine del mondo, che è andato oltre.” "
