--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "mn80:13.2": "Es heißt: ‚Von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.‘ ",
   "mn80:14.1": "Daraufhin sagte Vekhanasa zum Buddha: ",
   "mn80:14.2": "„Es ist unglaublich, Herr Gotama, es ist erstaunlich! ",
-  "mn80:14.3": "Wie treffend Herr Gotama das gesagt hat! "
+  "mn80:14.3": "Wie treffend Herr Gotama das gesagt hat! ",
+  "mn80:14.4": "‚Von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.‘ "
 }
