--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -18,6 +18,6 @@
   "iti109:12.2": "aspirando alla futura suprema liberazione da ogni giogo. ",
   "iti109:12.3": "Conoscendo correttamente, con il cuore ben liberato, ",
   "iti109:12.4": "verrebbe toccato dalla liberazione qui e ora, ",
-  "iti109:12.5": "Quei luminari che hanno realizzato la vita religiosa/spirituale ",
+  "iti109:12.5": "Quel luminare che ha realizzato la vita religiosa/spirituale ",
   "iti109:12.6": "quello si chiama uno che è giunto alla fine del mondo, che è andato oltre.” "
 }
