--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "mn80:14.3": "Wie treffend Herr Gotama das gesagt hat! ",
   "mn80:14.4": "‚Von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.‘ ",
   "mn80:14.5": "Herr Gotama, von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.“ ",
-  "mn80:14.6": "„it’s hard for to understand, da du eine andere Ansicht, ein anderes Bekenntnis und einen anderen Glauben hast, ist es schwer für dich, "
+  "mn80:14.6": "„it’s hard for to understand, da du eine andere Ansicht, ein anderes Bekenntnis und einen anderen Glauben hast, ist es schwer für dich, ",
+  "mn80:14.7": "die Sinne, Sinnenfreuden und die Freude, die das Sinnliche übersteigt, zu verstehen, es sei denn, du weihst dich der Übung unter Anleitung der Tradition. "
 }
